# Lemmatizer

./: .gitignore  CMakeLists.txt  README.md
include/: LemmaIter.h  Lemmatization.h
src/: LemmaIter.cpp  Lemmatization.cpp  LemmatizationImpl.cpp  LemmatizationImpl.h
test/data/: gen_unambiguous_lemmatizations_from_freq_list.py
test/src/: LemmasIterationTest.cpp
testing/: gen_unambiguous_lemmatizations.py
